Filter results by test name. Don't re-render page load time chart when selecting other results with the same test name.

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -29,7 +29,7 @@
 
 <body>
     <header id="header">
-        <span id="harpoon"><a href="/" title="home">Harpoon</a></span>
+        <span id="harpoon">Harpoon</span>
     </header>
 
     <nav id="left">
